<resources>
    <string name="app_name">Bill Foil</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="createAccountTitle">CREATE ACCOUNT</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="createAccountButton">Create Account</string>
    <string name="accountExists">Click Here for Login Page</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="loginTitle">LOGIN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="noAccount">Don\'t have an account? Click Here!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
